<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <TextView
           android:id="@+id/tv_name"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:textSize="20sp"
           android:text="@string/tv_name"/>

       <EditText
           android:id="@+id/et_name"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:hint="@string/et_name"
           android:inputType="text"/>

       <TextView
           android:id="@+id/tv_phone"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:textSize="20sp"
           android:text="@string/tv_phone"/>

       <EditText
           android:id="@+id/et_phone"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:hint="@string/et_phone"
           android:inputType="phone"/>

       <TextView
           android:id="@+id/tv_gender"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:textSize="20sp"
           android:text="@string/tv_gender"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/rb_female"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/rb_male"
                    android:layout_weight="1"/>

              </RadioGroup>

       </LinearLayout>

       <TextView
           android:id="@+id/tv_hobbies"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/tv_hobbies"
           android:textSize="20sp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="2">

          <LinearLayout
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <CheckBox
                  android:id="@+id/cb_singing"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/singing" />

              <CheckBox
                  android:id="@+id/cb_dancing"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/dancing" />

          </LinearLayout>

          <LinearLayout
              android:layout_width="0dp"
              android:layout_weight="1"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <CheckBox
                   android:id="@+id/cb_playing"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/playing" />

               <CheckBox
                   android:id="@+id/cb_sleeping"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/sleeping" />

          </LinearLayout>

       </LinearLayout>

       <TextView
           android:id="@+id/tv_course"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/tv_course"
           android:textSize="20sp"/>

       <android.support.v7.widget.AppCompatSpinner
           android:id="@+id/sp_course"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:entries="@array/Course">

       </android.support.v7.widget.AppCompatSpinner>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:weightSum="2">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <NumberPicker
                   android:id="@+id/pk_number"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_weight="1">

               </NumberPicker>

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_weight="1">

               <ToggleButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

           </LinearLayout>

       </LinearLayout>

       <Button
           android:id="@+id/bt_submit"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/bt_submit"/>

   </LinearLayout>

</ScrollView>